// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input overview 1 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    value="Cecelia Langosh"
  />
</DocumentFragment>
`;

exports[`Input overview 2 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    value="Cassidy Brekke"
  />
</DocumentFragment>
`;

exports[`Input overview 3 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    value="Chance Kessler"
  />
</DocumentFragment>
`;

exports[`Input overview 4 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    value="Cleo Lindgren"
  />
</DocumentFragment>
`;

exports[`Input overview 5 snapshot 1`] = `
<DocumentFragment>
  <input
    class="css-iyqgnx"
    value="Adeline Welch"
  />
</DocumentFragment>
`;
